--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         education, and experience. Built with clean UI design and optimized for
         desktop and mobile viewing.
             </p>
-            <a href=" https://akaur425.github.io/Weather-App/">View Project →</a>
+            <a href="  https://akaur425.github.io/Portfolio/">View Project →</a>
         </div>
     </div>
 </section>
