--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 Full-stack web application for managing students, owners, room requests,
                 contracts, and authentication.
             </p>
-            <a href="https://student-housing.ct.ws/">View Project →</a>
+            <a href="">View Project →</a>
         </div>
 
         <div class="project-card">
